force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/sf_devops__Remote_Change__c.object-meta.xml
<CustomObject>
    <description>This is the local representation of a SourceMember from a remote development environment.  This will be used to store local state about the SourceMember (like which work item it is associated with).</description>
    <label>Remote Change</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Remote Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>