force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/fields/sf_devops__Environment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Environment__c</fullName>
    <description>The Environment that this remote change was loaded from.</description>
    <label>Environment</label>
    <referenceTo>sf_devops__Environment__c</referenceTo>
    <relationshipName>Remote_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>