force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/fields/sf_devops__Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Member_Name__c</fullName>
    <description>The MemberName from our referenced SourceMembers</description>
    <label>Member Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>