force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/fields/sf_devops__Remote_Change_By__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Change_By__c</fullName>
    <description>The name of the user on the remote system that this change was made by.</description>
    <label>Remote Change By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>