force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/fields/sf_devops__Remote_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Change_Type__c</fullName>
    <description>What type of change is this?</description>
    <label>Remote Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
                <default>true</default>
                <label>ADD</label>
            </value>
            <value>
                <fullName>REMOVE</fullName>
            </value>
            <value>
                <fullName>CHANGE</fullName>
            </value>
            <value>
                <fullName>RENAME</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>