force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Remote_Change__c/fields/sf_devops__Source_Component__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Source_Component__c</fullName>
    <description>Computed field to simplify SOQL queries.</description>
    <formula>sf_devops__Member_Type__c  &amp; &quot;:&quot; &amp;  sf_devops__Member_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Component</label>
    <type>Text</type>
</CustomField>